--- a/src/app/components/delivery-detail/delivery-detail.component.sass
+++ b/src/app/components/delivery-detail/delivery-detail.component.sass
@@ -4,3 +4,6 @@
     overflow: hidden
 .completeButton
   margin-left: 1rem
+.clr-timeline.clr-timeline-vertical
+  .clr-timeline-step-header
+    word-break: keep-all
