--- a/src/app/components/delivery-list-completed/delivery-list-completed.component.html
+++ b/src/app/components/delivery-list-completed/delivery-list-completed.component.html
@@ -2,11 +2,11 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Package type</th>
-      <th>Courier</th>
-      <th>Recipient</th>
-      <th>Status</th>
-      <th>Last modified at</th>
+      <th>{{ 'delivery.list.packageType' | translate }}</th>
+      <th>{{ 'delivery.list.courier' | translate }}</th>
+      <th>{{ 'delivery.list.recipient' | translate }}</th>
+      <th>{{ 'delivery.list.status' | translate }}</th>
+      <th>{{ 'delivery.list.lastModifiedAt' | translate }}</th>
     </tr>
   </thead>
   <tbody>
