--- a/src/app/components/delivery-list-active/delivery-list-active.component.html
+++ b/src/app/components/delivery-list-active/delivery-list-active.component.html
@@ -2,21 +2,21 @@
   <thead>
     <tr>
       <th>ID</th>
-      <th>Package type</th>
-      <th>Courier</th>
-      <th>Recipient</th>
-      <th>Status</th>
-      <th>Last modified at</th>
+      <th>{{ 'delivery.list.packageType' | translate }}</th>
+      <th>{{ 'delivery.list.courier' | translate }}</th>
+      <th>{{ 'delivery.list.recipient' | translate }}</th>
+      <th>{{ 'delivery.list.status' | translate }}</th>
+      <th>{{ 'delivery.list.lastModifiedAt' | translate }}</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let delivery of deliveries">
       <td><a [routerLink]="['/deliveries', delivery.id]">{{ delivery.id }}</a></td>
-      <td>{{ delivery.packageType }}</td>
+      <td>{{ delivery.packageTypeObject.label | translate }}</td>
       <td>{{ delivery.courier }}</td>
       <td>{{ delivery.recipient.firstName }} {{ delivery.recipient.lastName }}</td>
       <td>{{ delivery.status }}</td>
-      <td>{{ delivery.modifiedAt }}</td>
+      <td>{{ delivery.modifiedAt | date:'dd.MM.yyyy, HH:mm:ss' }}</td>
     </tr>
   </tbody>
 </table>
